--- a/index.css
+++ b/index.css
@@ -1,1 +1,68 @@
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+.full-page-component {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+header {
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: grey;
+}
+
+.image-container {
+    flex: 1;
+    position: relative;
+    overflow: hidden;
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    opacity: 0;
+    transition: background-color 0.3s ease, opacity 0.3s ease;
+}
+
+.image-overlay:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 1;
+}
+
+#overlay-title {
+    color: #fff; 
+    margin-bottom: 10px;
+}
+button{
+    cursor: pointer;
+}
+
+footer {
+    height: 100px;
+    background-color: grey;
+
+}
 
